--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=bhaskar
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.h2.console.settings.web-allow-others=true
