--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=bhaskar
 spring.datasource.password=bhaskar
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.h2.console.settings.web-allow-others=true
